# medxai

./: .gitignore  LICENSE  PREREG.md  README.md  pyproject.toml  requirements.txt
conf/: config.yaml  frozen.yaml
notebooks/: 00_smoke_test.py
src/medxai/: __init__.py
src/medxai/backbones/: __init__.py  losses.py  model.py  train_chest.py
src/medxai/data/: __init__.py  build_splits.py  dataset.py  splits.py
src/medxai/eval/: __init__.py  faithfulness.py  run_faithfulness.py
src/medxai/graph/: __init__.py  build_graphs.py  dataset.py  gnn.py  pooling.py  train_gnn.py
src/medxai/regions/: __init__.py  demo.py  superpixels.py
src/medxai/utils/: __init__.py  determinism.py  metrics.py
src/medxai/xai/: __init__.py  explainers.py  generate.py
tests/: test_splits.py
