[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medxai"
version = "0.0.1"
description = "Transparent explanations in medical imaging: CNN baselines + region-graph GNNs with attention."
requires-python = ">=3.10"
# Runtime deps are intentionally NOT pinned here: on Kaggle torch/torchvision
# are preinstalled and CUDA-matched. Pinning them would fight the base image.
# Project-specific extras live in requirements.txt and are installed explicitly.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
